#
#   Copyright 2022 Peter De Schrijver
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#

[package]
name = "u64-monitor"
version = "0.1.0"
authors = ["Peter De Schrijver <p2@psychaos.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
clap = "2.33"
crossbeam-channel = "0.4"
signal-hook = "0.1"
parse_int = "0.5"
anyhow = "1.0"
vcd = "0.6"
ftp = "3.0"
chrono = "0.2"
lazy_static = "1.4"
regex = "1.5"